--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
 
     <!-- Themefisher Icon font -->
     <link rel="stylesheet" href="plugins/themefisher-font/style.css">
@@ -130,6 +131,67 @@
   </div>
   </section>
 
+  <div class="our-projects">
+    <div id="gal" class="container">
+        <h2 class="special-heading">Project</h2>
+        <ul class="shuffle">
+            <li class="selected filter" data-filter="all">All</li>
+            <li class="filter" data-filter=".mobile">Sales</li>
+            <li class="filter" data-filter=".coffee">Top seller</li>
+            <li class="filter" data-filter=".video">New</li>
+        </ul>
+        <div id="Container" class="gallery">
+            <div class="row">
+                <div class="mix mobile">
+                    <div class="over">View More</div>
+                    <span class="heart">
+                        <i class="fa fa-heart"></i> 14
+                    </span>
+                    <img src="./images/book_image/1035684899154725399061K0Q1b8iYL.jpg" alt="" />
+                </div>
+                <div class="mix coffee">
+                    <div class="over">View More</div>
+                    <span class="heart">
+                        <i class="fa fa-heart"></i> 14
+                    </span>
+                    <img src="./images/book_image/1301136786154725400151Km1K4z8TL.jpg" alt="" />
+                </div>
+                <div class="mix video">
+                    <div class="over">View More</div>
+                    <span class="heart">
+                        <i class="fa fa-heart"></i> 14
+                    </span>
+                    <img src="./images/book_image/14279400981545869734Ruth.jpg" alt="" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="mix video">
+                    <div class="over">View More</div>
+                    <span class="heart">
+                        <i class="fa fa-heart"></i> 14
+                    </span>
+                    <img src="./images/book_image/1982775503154725398051C1xBtyjyL.jpg" alt="" />
+                </div>
+                <div class="mix  mobile">
+                    <div class="over">View More</div>
+                    <span class="heart">
+                        <i class="fa fa-heart"></i> 14
+                    </span>
+                    <img src="./images/book_image/204307141547242761our.jpg" alt="" />
+                </div>
+                <div class="mix coffee">
+                    <div class="over">View More</div>
+                    <span class="heart">
+                        <i class="fa fa-heart"></i> 14
+                    </span>
+                    <img src="./images/book_image/Dewey.jpg" alt="" />
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
   <footer class="footer section text-center">
     <div class="container">
         <div class="row">
@@ -193,6 +255,11 @@
       x[slideIndex-1].style.display = "block";  
     }
     </script>
+     <script src=" js/jquery-3.5.1.min.js "></script>
+     <script src=" js/jquery.bxslider.js "></script>
+     <script src=" js/jquery.mixitup.js"></script>
+     <script src="js/jquery.nicescroll.min.js"></script>
+     <script src="js/custom.js "></script>
 </body>
 
 </html>
